RESOLVED FIXED163607
Fix build for platforms where HAVE(LINK_PREVIEW) is false
https://bugs.webkit.org/show_bug.cgi?id=163607
Summary Fix build for platforms where HAVE(LINK_PREVIEW) is false
Megan Gardner
Reported 2016-10-18 11:33:02 PDT
Fix build for platforms where HAVE(LINK_PREVIEW) is false
Attachments
Patch (1.48 KB, patch)
2016-10-18 11:40 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2016-10-18 11:40:27 PDT
WebKit Commit Bot
Comment 2 2016-10-18 12:24:53 PDT
Comment on attachment 291962 [details] Patch Clearing flags on attachment: 291962 Committed r207478: <http://trac.webkit.org/changeset/207478>
WebKit Commit Bot
Comment 3 2016-10-18 12:24:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.