Fix build for platforms where HAVE(LINK_PREVIEW) is false https://bugs.webkit.org/show_bug.cgi?id=163607

Patch by Megan Gardner <megan_gardner@apple.com> on 2016-10-18
Reviewed by Tim Horton.

Added needed # for link preview

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _contentsOfUserInterfaceItem:]):

Canonical link: https://commits.webkit.org/181391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207478 268f45cc-cd09-0410-ab3c-d52691b4dbfc